# 3BodySimulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  pyproject.toml  requirements.txt  vcpkg-configuration.json  vcpkg.json  xmake.lua
python/: dynamic.py  example.json  pyonly.py  visualize.py
src/: CMakeLists.txt  three_body.cpp  three_body.h  xmake.lua
